fixed water widget css spacing issue

--- a/src/app/components/water-widget/water-widget.component.scss
+++ b/src/app/components/water-widget/water-widget.component.scss
@@ -16,13 +16,13 @@
 
 .wiof-water-widget-icons {
   background-color: $water-color;
-  height: 75%;
-  padding: 10px;
+  height: 80%;
+  padding: 5px;
 
   &:hover {
     opacity: 0.8;
     border: solid 1px #000000;
-    padding: 9px;
+    padding: 4px;
   }
 }
 
